maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:5: error: illegal start of simple pattern
    var=random3()
       ^RandomMouseMaze:6: error: '=' expected but ';' found.
    if (var==0 && !estFaceMur()){
^RandomMouseMaze:6: error: illegal start of simple expression
    if (var==0 && !estFaceMur()){
        ^RandomMouseMaze:15: error: ')' expected but '}' found.
  }
  ^